--- a/environment.yml
+++ b/environment.yml
@@ -89,7 +89,7 @@ dependencies:
   - httptools=0.6.4=py312hea69d52_0
   - httpx=0.28.1=pyhd8ed1ab_0
   - httpx-sse=0.4.1=pyhd8ed1ab_0
-  - huggingface_hub=0.33.4=pyhd8ed1ab_0
+  - huggingface_hub=0.34.3=pyhd8ed1ab_0
   - humanfriendly=10.0=pyh707e725_8
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=hfee45f7_0
@@ -186,7 +186,7 @@ dependencies:
   - matplotlib-base=3.10.3=py312hdbc7e53_0
   - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - mdurl=0.1.2=pyhd8ed1ab_1
-  - mmh3=5.1.0=py312hd8f9ff3_1
+  - mmh3=5.2.0=py312h6b01ec3_0
   - monotonic=1.6=pyhd8ed1ab_0
   - mpc=1.3.1=h8f1351a_1
   - mpfr=4.2.1=hb693164_3
@@ -201,20 +201,13 @@ dependencies:
   - numba=0.61.2=py312h22bc582_1
   - numpy=1.26.4=py312h8442bc7_0
   - oauthlib=3.3.1=pyhd8ed1ab_0
-  - onnxruntime=1.22.0=py312h3c7403f_0_cpu
   - openai=1.97.1=pyhd8ed1ab_0
   - openh264=2.4.0=h965bd2d_0
   - openjpeg=2.5.3=h8a3d83b_0
   - openssl=3.5.1=h81ee809_0
-  - opentelemetry-api=1.35.0=pyhd8ed1ab_0
-  - opentelemetry-exporter-otlp-proto-common=1.35.0=pyhd8ed1ab_0
-  - opentelemetry-exporter-otlp-proto-grpc=1.35.0=pyhd8ed1ab_0
   - opentelemetry-instrumentation=0.56b0=pyhd8ed1ab_0
   - opentelemetry-instrumentation-asgi=0.56b0=pyhd8ed1ab_0
   - opentelemetry-instrumentation-fastapi=0.56b0=pyhd8ed1ab_0
-  - opentelemetry-proto=1.35.0=pyhd8ed1ab_0
-  - opentelemetry-sdk=1.35.0=pyhd8ed1ab_0
-  - opentelemetry-semantic-conventions=0.56b0=pyh3cfb1c2_0
   - opentelemetry-util-http=0.56b0=pyhd8ed1ab_0
   - orjson=3.11.0=py312h6f58b40_0
   - overrides=7.7.0=pyhd8ed1ab_1
@@ -241,7 +234,7 @@ dependencies:
   - pure_eval=0.2.3=pyhd8ed1ab_1
   - pyasn1=0.6.1=pyhd8ed1ab_2
   - pyasn1-modules=0.4.2=pyhd8ed1ab_0
-  - pybase64=1.4.1=py312hea69d52_0
+  - pybase64=1.4.2=py312h163523d_0
   - pycparser=2.22=pyh29332c3_1
   - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py312hd3c0895_0
@@ -251,7 +244,6 @@ dependencies:
   - pyjwt=2.10.1=pyhd8ed1ab_0
   - pyopenssl=25.1.0=pyhd8ed1ab_0
   - pyparsing=3.2.3=pyhd8ed1ab_1
-  - pypika=0.48.9=pyhd8ed1ab_1
   - pyproject_hooks=1.2.0=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
   - pysoundfile=0.13.1=pyhd8ed1ab_0
@@ -276,8 +268,7 @@ dependencies:
   - requests=2.32.4=pyhd8ed1ab_0
   - requests-oauthlib=2.0.0=pyhd8ed1ab_1
   - requests-toolbelt=1.0.0=pyhd8ed1ab_1
-  - rich=13.9.4=pyhd8ed1ab_1
-  - rich-toolkit=0.14.8=pyhe01879c_0
+  - rich-toolkit=0.14.9=pyhe01879c_0
   - rpds-py=0.26.0=py312hd3c0895_0
   - rsa=4.9.1=pyhd8ed1ab_0
   - scikit-learn=1.7.1=py312h54d6233_0
@@ -300,8 +291,8 @@ dependencies:
   - threadpoolctl=3.6.0=pyhecae5ae_0
   - tiktoken=0.9.0=py312hf3e4074_0
   - tk=8.6.13=h892fb3f_2
-  - tokenizers=0.21.3=py312hf3e4074_0
-  - tomli=2.2.1=pyhd8ed1ab_1
+  - tokenizers=0.21.4=py312hb03527c_0
+  - tomli=2.2.1=pyhe01879c_2
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
   - typer=0.16.0=pyh167b9f4_0
@@ -321,7 +312,7 @@ dependencies:
   - watchfiles=1.1.0=py312hcd83bfe_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - websocket-client=1.8.0=pyhd8ed1ab_1
-  - websockets=15.0.1=py312hea69d52_0
+  - websockets=15.0.1=py312h290adc7_1
   - werkzeug=3.1.3=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - wrapt=1.17.2=py312hea69d52_0
@@ -343,5 +334,14 @@ dependencies:
       - langgraph-checkpoint==2.1.1
       - langgraph-prebuilt==0.6.0
       - langgraph-sdk==0.2.0
+      - onnxruntime==1.22.1
+      - opentelemetry-api==1.36.0
+      - opentelemetry-exporter-otlp-proto-common==1.36.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.36.0
+      - opentelemetry-proto==1.36.0
+      - opentelemetry-sdk==1.36.0
+      - opentelemetry-semantic-conventions==0.57b0
       - ormsgpack==1.10.0
+      - pypika==0.48.9
+      - rich==14.1.0
 prefix: /Users/joachimjasmin/miniconda3/envs/odyssai
