--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ httpcore @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_h
 httptools @ file:///Users/runner/miniforge3/conda-bld/httptools_1732707689010/work
 httpx @ file:///home/conda/feedstock_root/build_artifacts/httpx_1733663348460/work
 httpx-sse @ file:///home/conda/feedstock_root/build_artifacts/httpx-sse_1750777478591/work
-huggingface_hub @ file:///home/conda/feedstock_root/build_artifacts/huggingface_hub_1752514897442/work
+huggingface_hub @ file:///home/conda/feedstock_root/build_artifacts/huggingface_hub_1753794153563/work
 humanfriendly @ file:///home/conda/feedstock_root/build_artifacts/humanfriendly_1733927922002/work
 hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
 idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
@@ -98,7 +98,7 @@ marshmallow @ file:///home/conda/feedstock_root/build_artifacts/marshmallow_1738
 matplotlib==3.10.3
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
 mdurl @ file:///home/conda/feedstock_root/build_artifacts/mdurl_1733255585584/work
-mmh3 @ file:///Users/runner/miniforge3/conda-bld/mmh3_1739359117630/work
+mmh3 @ file:///Users/runner/miniforge3/conda-bld/mmh3_1753863215110/work
 monotonic @ file:///home/conda/feedstock_root/build_artifacts/monotonic_1734029696393/work
 mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1733302684489/work
 msgpack @ file:///Users/runner/miniforge3/conda-bld/msgpack-python_1749813289613/work
@@ -108,7 +108,7 @@ mypy_extensions @ file:///home/conda/feedstock_root/build_artifacts/mypy_extensi
 numba @ file:///Users/runner/miniforge3/conda-bld/numba_1749491339439/work
 numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1707225421156/work/dist/numpy-1.26.4-cp312-cp312-macosx_11_0_arm64.whl#sha256=011d57633d659db8280a5811d62d0c5a615719a6d7cbd46a04f6ffce0c2a7db3
 oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1750415243897/work
-onnxruntime @ file:///Users/runner/miniforge3/conda-bld/onnxruntime_1746973167476/work/build-ci/Release/dist/onnxruntime-1.22.0-cp312-cp312-macosx_11_0_arm64.whl#sha256=00f7f8204211c88696bf135e78f4f409f6d6da3d64809aed94017c963c2b2b42
+onnxruntime==1.22.1
 openai @ file:///home/conda/feedstock_root/build_artifacts/openai_1753225145711/work
 opentelemetry-api @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-api_1752286782057/work
 opentelemetry-exporter-otlp-proto-common @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-exporter-otlp-proto-common_1752327473420/work
@@ -117,7 +117,7 @@ opentelemetry-instrumentation @ file:///home/conda/feedstock_root/build_artifact
 opentelemetry-instrumentation-asgi @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-instrumentation-asgi_1752299382506/work
 opentelemetry-instrumentation-fastapi @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-instrumentation-fastapi_1752302032932/work
 opentelemetry-proto @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-proto_1752308185200/work
-opentelemetry-sdk @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-sdk_1752299544546/work
+opentelemetry-sdk==1.36.0
 opentelemetry-semantic-conventions @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-semantic-conventions_1752290706981/work
 opentelemetry-util-http @ file:///home/conda/feedstock_root/build_artifacts/opentelemetry-util-http_1752262606837/work
 orjson @ file:///Users/runner/miniforge3/conda-bld/bld/rattler-build_orjson_1752631221/work
@@ -140,7 +140,7 @@ pulsar-client @ file:///Users/runner/miniforge3/conda-bld/bld/rattler-build_puls
 pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 pyasn1 @ file:///home/conda/feedstock_root/build_artifacts/pyasn1_1733217608156/work
 pyasn1_modules @ file:///home/conda/feedstock_root/build_artifacts/pyasn1-modules_1743436035994/work
-pybase64 @ file:///Users/runner/miniforge3/conda-bld/pybase64_1751428546368/work
+pybase64 @ file:///Users/runner/miniforge3/conda-bld/pybase64_1753662918727/work
 pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
 pydantic @ file:///home/conda/feedstock_root/build_artifacts/pydantic_1749927112905/work
 pydantic-settings @ file:///home/conda/feedstock_root/build_artifacts/pydantic-settings_1750801564484/work
@@ -164,7 +164,7 @@ requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1749498106
 requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1733772243268/work
 requests-toolbelt @ file:///home/conda/feedstock_root/build_artifacts/requests-toolbelt_1733734787568/work
 rich @ file:///home/conda/feedstock_root/build_artifacts/rich_1733342254348/work/dist
-rich-toolkit @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_rich-toolkit_1751941286/work
+rich-toolkit @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_rich-toolkit_1753752533/work
 rpds-py @ file:///Users/runner/miniforge3/conda-bld/bld/rattler-build_rpds-py_1751467161/work
 rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1744825426113/work
 scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1752825793418/work/dist/scikit_learn-1.7.1-cp312-cp312-macosx_11_0_arm64.whl#sha256=71b49b36b10e98404b7242c0a9c8357ad40cbdf6ca5efc46478a69d02657a892
@@ -185,8 +185,8 @@ sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1745946051654/wo
 tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1743640740204/work
 threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1741878222898/work
 tiktoken @ file:///Users/runner/miniforge3/conda-bld/tiktoken_1739550391739/work
-tokenizers @ file:///Users/runner/miniforge3/conda-bld/tokenizers_1751645851070/work/bindings/python
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1733256695513/work
+tokenizers @ file:///Users/runner/miniforge3/conda-bld/tokenizers_1753768069155/work/bindings/python
+tomli @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_tomli_1753796677/work
 tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
 typer==0.16.0
@@ -202,7 +202,7 @@ uvloop @ file:///Users/runner/miniforge3/conda-bld/uvloop_1730214386743/work
 watchfiles @ file:///Users/runner/miniforge3/conda-bld/watchfiles_1750053934318/work
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
 websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1733157342724/work
-websockets @ file:///Users/runner/miniforge3/conda-bld/websockets_1741285531809/work
+websockets @ file:///Users/runner/miniforge3/conda-bld/bld/rattler-build_websockets_1753458617/work/dist
 Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1733160440960/work
 wheel==0.45.1
 wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1736869483984/work
