--- a/environment.yml
+++ b/environment.yml
@@ -23,10 +23,10 @@ dependencies:
   - brotli-python=1.1.0=py312hd8f9ff3_3
   - bzip2=1.0.8=h99b78c6_7
   - c-ares=1.34.5=h5505292_0
-  - ca-certificates=2025.7.14=hbd8a1cb_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
   - cachetools=5.5.2=pyhd8ed1ab_0
   - cairo=1.18.4=h6a3b0d2_0
-  - certifi=2025.7.14=pyhd8ed1ab_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
   - cffi=1.17.1=py312h0fad829_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - chromadb=1.0.15=py312hf716798_0
@@ -239,7 +239,6 @@ dependencies:
   - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py312hd3c0895_0
   - pydantic-settings=2.10.1=pyh3cfb1c2_0
-  - pydub=0.25.1=pyhd8ed1ab_1
   - pygments=2.19.2=pyhd8ed1ab_0
   - pyjwt=2.10.1=pyhd8ed1ab_0
   - pyopenssl=25.1.0=pyhd8ed1ab_0
@@ -342,6 +341,7 @@ dependencies:
       - opentelemetry-sdk==1.36.0
       - opentelemetry-semantic-conventions==0.57b0
       - ormsgpack==1.10.0
+      - pydub==0.25.1
       - pypika==0.48.9
       - rich==14.1.0
 prefix: /Users/joachimjasmin/miniconda3/envs/odyssai
