--- a/environment.yml
+++ b/environment.yml
@@ -80,6 +80,7 @@ dependencies:
   - greenlet=3.2.3=py312hd8f9ff3_0
   - grpcio=1.73.1=py312h836b8bb_0
   - grpcio-status=1.73.1=pyhd8ed1ab_0
+  - gunicorn=23.0.0=py312h81bd7bf_1
   - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - harfbuzz=11.3.2=hcb8449c_0
@@ -204,7 +205,7 @@ dependencies:
   - openai=1.97.1=pyhd8ed1ab_0
   - openh264=2.4.0=h965bd2d_0
   - openjpeg=2.5.3=h8a3d83b_0
-  - openssl=3.5.1=h81ee809_0
+  - openssl=3.5.2=he92f556_0
   - opentelemetry-instrumentation=0.56b0=pyhd8ed1ab_0
   - opentelemetry-instrumentation-asgi=0.56b0=pyhd8ed1ab_0
   - opentelemetry-instrumentation-fastapi=0.56b0=pyhd8ed1ab_0
