--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     expose:
       - "9000"
 
-  nginx:
-    image: nginx:alpine
-    container_name: odyssai-nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - odyssai-backend
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: odyssai-nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - odyssai-backend
