Modifier la section des ports dans docker-compose.yml pour remplacer 'expose' par 'ports'.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=/app/.secrets/google_tts.json
     volumes:
       - ./.secrets:/app/.secrets:ro
-    expose:
+    ports:
       - "9000:9000"
 
   # nginx:
