--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,35 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=/app/.secrets/google_tts.json
     volumes:
       - ./.secrets:/app/.secrets:ro
-    ports:
-      - "9000:9000"
+    expose:
+      - "9000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.odyssai.rule=Host(`localhost`) || PathPrefix(`/api`)"
+      - "traefik.http.routers.odyssai.entrypoints=web"
+      - "traefik.http.services.odyssai.loadbalancer.server.port=9000"
+    networks:
+      - traefik-network
 
-  # nginx:
-  #   image: nginx:alpine
-  #   container_name: odyssai-nginx
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
-  #   depends_on:
-  #     - odyssai-backend
+  traefik:
+    image: traefik:v3.5
+    container_name: traefik
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.network=traefik-network"
+      - "--entrypoints.web.address=:80" # ← Changé de :8888 à :80
+      - "--log.level=INFO"
+    ports:
+      - "8888:80" # Web
+      - "9090:8080" # Dashboard
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - traefik-network
+    depends_on:
+      - odyssai-backend
+
+networks:
+  traefik-network:
+    driver: bridge
