Ajouter un déclencheur manuel au workflow de construction et de déploiement Docker

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -11,6 +11,7 @@ on:
       - "pyproject.toml"
   pull_request:
     branches: [main]
+  workflow_dispatch: # Manual trigger
 
 env:
   REGISTRY: ghcr.io
