Ajouter fly.toml au workflow de construction et de déploiement Docker

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,6 +9,7 @@ on:
       - "environment*.yml"
       - "Dockerfile"
       - "pyproject.toml"
+      - "fly.toml"
   pull_request:
     branches: [main]
 
