--- a/fly.toml
+++ b/fly.toml
@@ -5,7 +5,7 @@ primary_region = 'cdg'
 
 [http_service]
   internal_port = 9000
-  force_https = false
+  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
@@ -21,16 +21,7 @@ primary_region = 'cdg'
   cpu_kind = 'shared'
   cpus = 1
 
-[[services]]
-  internal_port = 9000
-  protocol = "tcp"
-  processes = ["app"]
-  [[services.ports]]
-    port = 80
-  [[services.ports]]
-    port = 443
-
-[[http_service.checks]]
+[http_service.checks]
   grace_period = "10s"
   interval = "30s"
   method = "GET"
