--- a/fly.toml
+++ b/fly.toml
@@ -21,7 +21,7 @@ primary_region = 'cdg'
   cpu_kind = 'shared'
   cpus = 1
 
-[http_service.checks]
+[[http_service.checks]]
   grace_period = "10s"
   interval = "30s"
   method = "GET"
