Ajouter le support de MongoDB avec des configurations, un client et des exemples d'utilisation

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,6 +20,7 @@ services:
       - LANGSMITH_API_KEY=${LANGSMITH_API_KEY}
       - LANGSMITH_PROJECT=${LANGSMITH_PROJECT}
       - GOOGLE_APPLICATION_CREDENTIALS=/app/.secrets/google_tts.json
+      - MONGODB_URI=${MONGODB_URI}
     volumes:
       - ./.secrets:/app/.secrets:ro
     expose:
