--- a/environment-export.yml
+++ b/environment-export.yml
@@ -18,6 +18,7 @@ dependencies:
   - gunicorn=23.0.0
   - flask=3.1.1
   - flask-cors=6.0.1
+  - bcrypt=4.3.0
 
   # HTTP and networking
   - httpx=0.28.1
