--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,49 @@
-fastapi==0.115.9
-uvicorn[standard]==0.35.0
-gunicorn==23.0.0
-Flask==3.1.1
-flask-cors==6.0.1
-
-httpx==0.28.1
-aiohttp==3.10.*
-websockets==15.*
-
-orjson==3.11.*
-pydantic==2.11.7
-pydantic-settings==2.10.1
-tiktoken==0.9.0
-scikit-learn==1.7.1
-numpy==1.26.4
-scipy==1.16.0
-
-langchain==0.3.26
-langchain-openai==0.3.28
+appdirs==1.4.4
+boltons==25.0.0
+cachecontrol==0.14.3
+click-default-group==1.2.4
+conda-lock==3.0.4
+crashtest==0.4.1
+distlib==0.4.0
+dulwich==0.22.8
+ensureconda==1.4.7
+fastjsonschema==2.21.2
+gitdb==4.0.12
+gitpython==3.1.45
+installer==0.7.0
+jaraco-classes==3.4.0
+jaraco-context==6.0.1
+jaraco-functools==4.2.1
+keyring==25.6.0
+langchain-huggingface==0.3.1
 langgraph==0.6.0
 langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.0
 langgraph-sdk==0.2.0
-openai==1.97.1
-chromadb==1.0.15
-
-google-cloud-texttospeech==2.27.0
+more-itertools==10.7.0
+networkx==3.5
+onnxruntime==1.22.1
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+ormsgpack==1.10.0
+pkginfo==1.12.1.2
 pydub==0.25.1
-mmh3==5.2.0
-
-# MongoDB
-pymongo==4.10.1
-dnspython==2.7.0
+pymongo==4.14.0
+pypika==0.48.9
+rich==14.1.0
+ruamel-yaml==0.18.14
+ruamel-yaml-clib==0.2.12
+safetensors==0.6.2
+semver==3.0.4
+sentence-transformers==5.1.0
+smmap==5.0.2
+tomlkit==0.13.3
+torch==2.8.0
+transformers==4.55.4
+trove-classifiers==2025.8.6.13
+virtualenv==20.34.0
+xattr==1.2.0
