Mise à jour du Dockerfile pour utiliser mambaorg/micromamba, optimisation de la création de l'environnement conda et nettoyage des caches. Ajout de la gestion des modèles HF dans fly.toml.

--- a/fly.toml
+++ b/fly.toml
@@ -27,3 +27,7 @@ primary_region = 'cdg'
   method = "GET"
   timeout = "5s"
   path = "/"
+
+[mounts]
+  source = "hf_cache"
+  destination = "/data/hf"
