--- a/environment-export.yml
+++ b/environment-export.yml
@@ -1,9 +1,11 @@
 name: odyssai
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.12
   - pip
+  # Core system packages
   - ffmpeg
   - libsndfile
   - portaudio
